--- a/hello_world.yml
+++ b/hello_world.yml
@@ -4,7 +4,7 @@
     parameters:
       - string:
           name: Message
-          default: Hello World
+          default: Hello World!
           description: A message to echo
     builders:
       - shell: "echo $Message
